feat: Implement initial application shell with global theming, core layout components, routing, and i18n support.

--- a/apps/shell/public/assets/i18n/shell/ar.json
+++ b/apps/shell/public/assets/i18n/shell/ar.json
@@ -56,5 +56,9 @@
     "title": "الوحدة غير متوفرة حالياً",
     "message": "الوحدة المطلوبة غير متوفرة حالياً. قد يكون ذلك بسبب عدم تشغيل الخدمة في وضع التطوير.",
     "backToDashboard": "الذهاب للوحة التحكم"
+  },
+  "footer": {
+    "copyright": "جميع الحقوق محفوظة {{ year }} ©",
+    "version": "v1.0.0"
   }
 }
