--- a/apps/shell/public/assets/i18n/auth/en.json
+++ b/apps/shell/public/assets/i18n/auth/en.json
@@ -43,5 +43,16 @@
     "acceptTerms": "You must accept the terms",
     "invalidEmailPassword": "Login failed. Invalid email or password.",
     "fillRequired": "Please fill in all required fields"
+  },
+  "selectCompany": {
+    "title": "Select Company",
+    "subtitle": "Choose a company to continue",
+    "searchPlaceholder": "Search companies...",
+    "clearSearch": "Clear search",
+    "selectButton": "Select",
+    "backToLogin": "Back to Login",
+    "loading": "Loading companies...",
+    "noCompanies": "No companies available",
+    "noResults": "No companies match your search"
   }
 }
