feat: Implement core authentication, authorization, API infrastructure, and shell application structure with i18n support.

--- a/apps/shell/public/assets/i18n/shell/ar.json
+++ b/apps/shell/public/assets/i18n/shell/ar.json
@@ -27,7 +27,7 @@
     "searchCompany": "بحث عن شركة..."
   },
   "dashboard": {
-    "welcome": "مرحباً بك مجدداً!",
+    "welcome": "مرحباً بك مجدداً، {{name}}!",
     "subtitle": "اختر وحدة للبدء",
     "modules": {
       "hr": {
