--- a/apps/shell/public/assets/i18n/shell/en.json
+++ b/apps/shell/public/assets/i18n/shell/en.json
@@ -27,7 +27,7 @@
     "searchCompany": "Search company..."
   },
   "dashboard": {
-    "welcome": "Welcome Back!",
+    "welcome": "Welcome Back, {{name}}!",
     "subtitle": "Select a module to get started",
     "modules": {
       "hr": {
