feat: Introduce core authentication, shell layout, user/company/permissions state management, and internationalization.

--- a/apps/shell/public/assets/i18n/shell/ar.json
+++ b/apps/shell/public/assets/i18n/shell/ar.json
@@ -14,7 +14,27 @@
     "loading": "جاري تحميل القائمة...",
     "retry": "إعادة المحاولة",
     "expand": "توسيع القائمة الجانبية",
-    "collapse": "طي القائمة الجانبية"
+    "collapse": "طي القائمة الجانبية",
+    "noItems": "لا توجد عناصر في القائمة"
+  },
+  "tabs": {
+    "main": "الرئيسية",
+    "payment": "المدفوعات",
+    "needs": "الاحتياجات",
+    "docs": "الوثائق"
+  },
+  "nav": {
+    "dashboard": "لوحة التحكم",
+    "allUsers": "المستخدمين",
+    "companies": "الشركات",
+    "roles": "الأدوار",
+    "vendors": "الموردين",
+    "groups": "المجموعات",
+    "autoCodes": "الأكواد التلقائية",
+    "locations": "المواقع",
+    "companyStructure": "هيكل الشركة",
+    "techSupport": "الدعم الفني",
+    "versionsReports": "الإصدارات والتقارير"
   },
   "profile": {
     "admin": "مسؤول",
